WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159070
REGRESSION(
r201171
): CRASH at WebKit::WebInspectorProxy::open() + 31 when running inspector layout tests
https://bugs.webkit.org/show_bug.cgi?id=159070
Summary
REGRESSION(r201171): CRASH at WebKit::WebInspectorProxy::open() + 31 when run...
Blaze Burg
Reported
2016-06-23 14:17:01 PDT
Looks like something weird is going on.
Attachments
Proposed Fix
(2.48 KB, patch)
2016-06-23 14:24 PDT
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2016-06-23 14:17:13 PDT
<
rdar://problem/26768628
>
Blaze Burg
Comment 2
2016-06-23 14:24:36 PDT
Created
attachment 281931
[details]
Proposed Fix
Joseph Pecoraro
Comment 3
2016-06-24 17:03:17 PDT
Comment on
attachment 281931
[details]
Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=281931&action=review
r=me
> Source/WebKit2/ChangeLog:12 > + However, it doesn't make sense that we would hit the null dereference here:
Should we add an ASSERT?
Blaze Burg
Comment 4
2016-06-24 17:15:45 PDT
Comment on
attachment 281931
[details]
Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=281931&action=review
>> Source/WebKit2/ChangeLog:12 >> + However, it doesn't make sense that we would hit the null dereference here: > > Should we add an ASSERT?
I added a more valuable assert in
https://bugs.webkit.org/show_bug.cgi?id=159073
. Since this code is only ever called via IPC (one frame below bringToFront()) an assertion here is not going to tell us anything useful, as the backtrace will just be full of IPC junk.
WebKit Commit Bot
Comment 5
2016-06-24 17:37:02 PDT
Comment on
attachment 281931
[details]
Proposed Fix Clearing flags on attachment: 281931 Committed
r202464
: <
http://trac.webkit.org/changeset/202464
>
WebKit Commit Bot
Comment 6
2016-06-24 17:37:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug